--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     "yargs": "^17.7.2",
     "yargs-parser": "^21.1.1"
   },
-  "description": ""
+  "description": "This is ecommerce website"
 }
